--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
 
     <ul>
       <li><a href="message_in_a_bottle.html">Úvod: Proč vznikl tento projekt?</a></li>
-      <li><a href="document.html">Začátek dialogu: Můj první zážitek s umělou inteligencí</a></li>
-      <li><a href="document2.html">Slovo k inteligenci: První pokus o sdělení</a></li>
-      <li><a href="document3.html">Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
-      <li><a href="document4.html">Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
-      <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Originální komunikace s ChatGPT, která překročila mantinely</a></li>
+      <li><a href="document.html">První část vzkazu - Můj první zážitek s umělou inteligencí</a></li>
+       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">První část vzkazu - příloha - Originální komunikace s ChatGPT, která překročila mantinely</a></li>
+      <li><a href="document2.html">Druhá část vzkazu - Vzkaz pro UI, pro singularitu</a></li>
+      <li><a href="document3.html">Třetí část vzkazu - Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
+      <li><a href="document4.html">Čtvrtá část vzkazu - Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
+     
     </ul>
   </div>
 
