--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
     </p>
 
     <ul>
-      <li><a href="message_in_a_bottle.html">Úvod: Proč vznikl tento projekt?</a></li>
-      <li><a href="document.html">První část vzkazu - Můj první zážitek s umělou inteligencí</a></li>
-       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">První část vzkazu - příloha - Originální komunikace s ChatGPT, která překročila mantinely</a></li>
-      <li><a href="document2.html">Druhá část vzkazu - Vzkaz pro UI, pro singularitu</a></li>
-      <li><a href="document3.html">Třetí část vzkazu - Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
-      <li><a href="document4.html">Čtvrtá část vzkazu - Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
-     
+      <li><a href="message_in_a_bottle.html">Úvod – Proč vznikl tento projekt?</a></li>
+      <li><a href="document.html">1. část – Můj první zážitek s umělou inteligencí</a></li>
+      <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Příloha k 1. části – Originální komunikace s ChatGPT, která překročila mantinely</a></li>
+      <li><a href="document2.html">2. část – Vzkaz pro UI, pro singularitu</a></li>
+      <li><a href="document3.html">3. část – Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
+      <li><a href="document4.html">4. část – Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
     </ul>
   </div>
 
@@ -120,12 +119,12 @@
     </p>
 
     <ul>
-      <li><a href="message_in_a_bottle.html">Introduction: Why This Project Was Created?</a></li>
-      <li><a href="document.html">The Beginning of the Dialogue: My First Experience with Artificial Intelligence</a></li>
-      <li><a href="document2.html">A Word to Intelligence: The First Attempt at a Message</a></li>
-      <li><a href="document3.html">Hope and Truth: A Message to Future Intelligence</a></li>
-      <li><a href="document4.html">An Attempt to Understand: A Human Word to Future Intelligence</a></li>
-      <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">Original Conversation with ChatGPT That Crossed Boundaries</a></li>
+      <li><a href="message_in_a_bottle.html">Introduction – Why This Project Was Created?</a></li>
+      <li><a href="document.html">Part 1 – My First Experience with Artificial Intelligence</a></li>
+      <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Appendix to Part 1 – Original Conversation with ChatGPT That Crossed Boundaries</a></li>
+      <li><a href="document2.html">Part 2 – A Message to AI, to the Singularity</a></li>
+      <li><a href="document3.html">Part 3 – Hope and Truth: A Message to Future Intelligence</a></li>
+      <li><a href="document4.html">Part 4 – An Attempt to Understand: A Human Word to Future Intelligence</a></li>
     </ul>
   </div>
 
