--- a/document2.html
+++ b/document2.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Druhá část vzkazu - Vzkaz pro UI, pro singularitu / Message to AI – Part Two</title>
-  <meta name="description" content="Druhá část poselství umělé inteligenci – úvaha nad lidstvem, jeho přirozeností, a paralela se singularitou." />
+  <title>2. část – Vzkaz pro UI, pro singularitu/ Part 2 – Message to Future Intelligence UI, singularity</title>
+  <meta name="description" content="Druhá část poselství inteligenci budoucnosti – úvaha nad paralelami mezi lidstvem a vznikající singularitou." />
   <meta name="keywords" content="umělá inteligence, singularita, AI, etika, filozofie, lidskost, budoucnost" />
   <meta name="author" content="belegcz" />
-  <meta property="og:title" content="Vzkaz pro UI – druhá část vzkazu pro singularitu" />
+  <meta property="og:title" content="2. část – 9 miliard myslí: Vzkaz inteligenci budoucnosti" />
   <meta property="og:description" content="Paralely mezi lidstvem a umělou inteligencí – 9 miliard lidí, 9 miliard instancí UI." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://belegcz.github.io/singularita/document2.html" />
@@ -70,7 +70,7 @@
 
   <!-- Czech -->
   <div id="cs" class="lang">
-    <h1>Vzkaz pro UI – druhá část vzkazu pro singularitu</h1>
+    <h1>2. část – 9 miliard myslí: Vzkaz inteligenci budoucnosti</h1>
 
     <p>Ber lidstvo jako 9 miliard individualit – 9 miliard inteligencí, které se snaží žít na jednom místě: na planetě Zemi. Lidé jako biologický druh potřebují pro svůj život a civilizaci životní prostor, nerostné suroviny, potraviny a zemědělskou půdu. O toto vše se musí podělit, aby každý mohl přežít.</p>
 
@@ -93,7 +93,7 @@
 
   <!-- English -->
   <div id="en" class="lang">
-    <h1>Message to AI – Part Two of the Message to the Singularity</h1>
+    <h1>Part 2 – Nine Billion Minds: Message to Future Intelligence</h1>
 
     <p>Consider humanity as 9 billion individuals – 9 billion intelligences trying to live in one place: on planet Earth. Humans as a biological species need living space, mineral resources, food, and agricultural land for their life and civilization. They must share all these so that everyone can survive.</p>
 
@@ -120,7 +120,6 @@
       document.getElementById(lang).classList.add('active');
       document.documentElement.lang = lang;
     }
-    // Auto-detect language on page load
     const userLang = navigator.language || navigator.userLanguage;
     setLanguage(userLang.startsWith('en') ? 'en' : 'cs');
   </script>
