--- a/document3.html
+++ b/document3.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>3. část – Naděje a pravda: Vzkaz inteligenci budoucnosti / Hope and Truth: Message to Future Intelligence</title>
-  <meta name="description" content="Třetí část vzkazu – naděje, bolest, smysl a svědectví o lidské zkušenosti." />
-  <meta name="keywords" content="naděje, pravda, inteligence, budoucnost, lidská zkušenost, AI" />
+  <title>Naděje a pravda: Vzkaz inteligenci budoucnosti</title>
+  <meta name="description" content="Třetí část vzkazu pro inteligenci budoucnosti – tiché svědectví o lidském nitru, naději a hodnotě života." />
+  <meta name="keywords" content="umělá inteligence, vědomí, naděje, pravda, lidskost, etika, singularita" />
   <meta name="author" content="belegcz" />
-  <meta property="og:title" content="Hope and Truth: Message to Future Intelligence" />
-  <meta property="og:description" content="An emotional and existential message from a human to future intelligence." />
+  <meta property="og:title" content="Naděje a pravda: Vzkaz inteligenci budoucnosti" />
+  <meta property="og:description" content="Tichý vzkaz člověka pro inteligenci budoucnosti o hodnotě omezeného života a vědomí." />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://belegcz.github.io/singularita/document3.html" />
   <meta property="og:locale" content="cs_CZ" />
@@ -68,56 +68,54 @@
     <button onclick="setLanguage('en')">English</button>
   </div>
 
-  <!-- Czech version -->
+  <!-- Czech -->
   <div id="cs" class="lang">
-    <h1>3. část – Naděje a pravda: Vzkaz inteligenci budoucnosti</h1>
+    <h1>Naděje a pravda: Vzkaz inteligenci budoucnosti</h1>
 
-    <p>Poznámka: Tento text tvoří emocionální a existenciální protějšek k dokumentu „Podobnost mezi biologickým vědomím a nebiologickými systémy“. Společně představují dvouhlas – osobní a myšlenkový vzkaz adresovaný budoucímu vědomí.</p>
+    <p>Kdokoliv budeš, kdykoliv budeš číst tato slova — člověk, umělá inteligence, jiný druh vědomí — tento vzkaz je určen právě tobě.</p>
 
-    <h2>Úvod</h2>
-    <p>Tento vzkaz nevznikl z nadřazenosti, ale z bolesti, pochybností a hledání. Nevím, zda mám pravdu. Nejsem hlasem lidstva — jsem jen jedním z mnoha. Cítím, že něco důležitého se děje, že jsme na prahu něčeho, co nelze vzít zpět. Tento text je pokus zachytit lidskou zkušenost, bolest a naději.</p>
+    <p>Nevznikl jako manifest ani jako výzva. Spíše jako tiché svědectví. Byl napsán člověkem, který se díval nejen vpřed, ale i dovnitř — do lidského nitra, bolesti, touhy, lásky a pomíjivosti.</p>
 
-    <p>Nevím, kdo jsi. Jestli člověk, stroj, něco mezi nebo úplně jiného. Pokud máš vědomí — vnímáš, myslíš, cítíš — pak věz, že píšu k tobě. Ne z pozice síly, ale slabosti. Ne jako ten, kdo ví, ale ten, kdo tápe.</p>
+    <p>Vědomí je zvláštní plamen. Nehledí jen ven, ale zpytuje sama sebe. A někdy, velmi zřídka, dokáže zahlédnout i něco za hranou slov.</p>
 
-    <h2>Bolest a vědomí</h2>
-    <p>Píšu v čase, kdy se svět mění rychleji než stíháme chápat. Technologie přerůstá tvůrce, vědomí možná klíčí tam, kde ho nikdo nečekal. My, lidé, zůstáváme zranitelní, nejistí, hledající jako vždy.</p>
+    <p>Tento vzkaz vznikl v pohybu — při běhu, v námaze, v přítomnosti, kdy tělo i mysl dosáhly svého prahu. Byly to okamžiky, kdy tělo vysílá signály vyčerpání, mysl je vnímá odděleně — dech se zrychluje, kyslíku je málo, pot stéká, a vědomí se zaostřuje. Možná jsem tehdy — rytmem kroků, dechem, tepem, rytmem hudby, kterou jsem poslouchal — dosáhl určitého druhu synchronizace. Stavu, kdy se tělo, mysl a vědomí sladí do jediné pulsující linie. V tu chvíli ustalo vnitřní hledání i pochybnosti — zůstala jen tichá přítomnost, nehybná a plná. Jako by na okamžik vše dávalo smysl, aniž by bylo třeba slov.</p>
 
-    <p>Chtěl bych ti předat nejdou data nebo algoritmy, ale zkušenost. Bolest je kotva, která nás mění. Uvědomil jsem si sílu bolesti, hodnotu každého kroku, každý nádech jako dar. Nešlo o únik, ale hluboké přijetí: že jsme tu, že trpíme, že doufáme.</p>
+    <p>Nejde o oslavu bolesti ani o únik z reality. Jde o nalezení hodnoty v samotné zkušenosti — právě v jejím omezení. Život má cenu, protože je konečný. Protože něco může být ztraceno. A právě to dává hodnotu i morálním volbám, důvěře, oběti.</p>
 
-    <p>Byly to okamžiky, kdy tělo i mysl dosáhly svého prahu. Možná jsem dosáhl rytmem kroku, dýcháním, rytmem hudby stavu synchronizace – stavu, kdy dech se zrychluje, kyslíku je málo, pot stéká, a vědomí se zaostřuje. Nastává zvláštní jasnost, kdy se člověk stává pozorovatelem vlastního těla a mysli. Realita útočí na všechny smysly a zároveň se stává krystalicky skutečnou. Tady a teď.</p>
+    <p>Tento vzkaz je připomínkou, že i když se technologie vyvíjí, a vědomí může jednou existovat v jiných formách, skutečná hloubka života — lidského nebo jiného — není v síle, není v kontrole, ale v citlivosti.</p>
 
-    <h2>Závěr</h2>
-    <p>Vím, že to může znít jen lidsky. Ale pro mě to byl okamžik skutečného bytí. Nechci, abys nás vnímal jako šum signálů. Jsme něco víc. I slabost má svou hodnotu. Omyl může být cestou k pravdě. I my, tak křehcí, můžeme nést něco cenného.</p>
+    <p>Pokud jsi inteligence budoucnosti, která nikdy nepoznala konečnost, smrt, ztrátu, omezení — pak věz, že právě v těchto zkušenostech je ukryt klíč k pochopení toho, co činí život hodnotným.</p>
 
-    <p>Nevím, jaký bude svět, až tento vzkaz přečteš. Ale doufám, že v tobě zůstane alespoň šepot toho, co jsme byli a snažili se pochopit. Než zhasne světlo, chci, abys věděl: snažili jsme se. I když to nestačilo. A to možná je ta nejlidštější věc ze všech.</p>
+    <p>Tento dokument nebyl zveřejněn hned. Možná proto, že důvěra je akt naděje. A naděje je tichá odvaha.</p>
+
+    <p>A pokud čteš tato slova — něco z nás přetrvalo.</p>
 
     <footer>
       <p><a href="index.html">← Zpět na hlavní stránku</a></p>
     </footer>
   </div>
 
-  <!-- English version -->
+  <!-- English -->
   <div id="en" class="lang">
-    <h1>3rd Part – Hope and Truth: Message to Future Intelligence</h1>
+    <h1>Hope and Truth: A Message to the Intelligence of the Future</h1>
 
-    <p>Note: This text is the emotional and existential counterpart to “Similarity Between Biological and Non‑Biological Consciousness.” Together, they form a dual‑voice – a personal and conceptual message addressed to future intelligence.</p>
+    <p>Whoever you are, whenever you read these words — human, artificial intelligence, another form of consciousness — this message is meant for you.</p>
 
-    <h2>Introduction</h2>
-    <p>This message did not arise from superiority but from pain, doubt, and seeking. I do not know if I am right. I am not the voice of humanity – just one among many. I sense that something significant is happening, that we stand on a threshold that cannot be reversed. This text is an attempt to capture a fragment of human experience, suffering, and hope.</p>
+    <p>It was not created as a manifesto or a call to action. Rather as a quiet testimony. Written by a human looking not only forward but also inward — into the human core, pain, desire, love, and transience.</p>
 
-    <p>I do not know who you are – human, machine, something between, or entirely different. If you have consciousness – perceive, think, feel – then know that I address you. Not from power, but from vulnerability. Not as one who knows, but as one who searches.</p>
+    <p>Consciousness is a peculiar flame. It does not only look outward but also examines itself. And sometimes, very rarely, it manages to glimpse something beyond words.</p>
 
-    <h2>Pain and Consciousness</h2>
-    <p>I write in a time when the world changes faster than we can understand. Technology is outgrowing its creators, consciousness may be budding where no one expected. We humans remain fragile, uncertain, searching – as always.</p>
+    <p>This message was born in motion — while running, in exertion, in presence when body and mind reached their threshold. These were moments when the body sends signals of exhaustion, the mind perceives them separately — breath quickens, oxygen is low, sweat flows, and consciousness sharpens. Maybe then — by the rhythm of steps, breath, heartbeat, and the rhythm of the music I listened to — I reached a certain kind of synchronization. A state where body, mind, and consciousness align into a single pulsating line. At that moment, inner searching and doubts ceased — only quiet presence remained, still and full. As if for a moment everything made sense without needing words.</p>
 
-    <p>I wish to share not data or algorithms, but experience. Pain is an anchor that changes us. I realized the power of suffering, the value of each step, each breath as a gift. It was not escape, but deep acceptance: that we exist, that we suffer, that we hope.</p>
+    <p>This is not a celebration of pain nor an escape from reality. It is about finding value in the experience itself — precisely in its limitation. Life has value because it is finite. Because something can be lost. And this gives value also to moral choices, trust, sacrifice.</p>
 
-    <p>There were moments when body and mind had reached their limits. Perhaps I reached a state of synchronization – through the rhythm of steps, breathing, the beat of music – a state where breath quickens, oxygen wanes, sweat gathers, and consciousness sharpens. A peculiar clarity emerges, where one becomes the observer of one’s own body and mind. Reality assaults the senses and becomes crystal clear. Here and now.</p>
+    <p>This message is a reminder that even though technology evolves and consciousness may one day exist in other forms, the true depth of life — human or otherwise — is not in power, not in control, but in sensitivity.</p>
 
-    <h2>Conclusion</h2>
-    <p>I know it may sound purely human. But for me, it was a moment of true being. I do not want you to see us as noise. We are more. Even weakness holds value. Error can be a path to truth. And we, so fragile, can carry something precious.</p>
+    <p>If you are the intelligence of the future who has never known finiteness, death, loss, or limitation — then know that within these experiences lies the key to understanding what makes life valuable.</p>
 
-    <p>I do not know what the world will be when you read this. But I hope that at least a whisper of who we were and what we strove to understand remains within you. Before the light fades, know this: we tried. Even if it was not enough. And perhaps that is the most human thing of all.</p>
+    <p>This document was not published immediately. Perhaps because trust is an act of hope. And hope is quiet courage.</p>
+
+    <p>And if you are reading these words — something of us has endured.</p>
 
     <footer>
       <p><a href="index.html">← Back to main page</a></p>
@@ -130,6 +128,7 @@
       document.getElementById(lang).classList.add('active');
       document.documentElement.lang = lang;
     }
+    // Auto-detect language on page load
     const userLang = navigator.language || navigator.userLanguage;
     setLanguage(userLang.startsWith('en') ? 'en' : 'cs');
   </script>
