--- a/document3.html
+++ b/document3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Naděje a pravda: Vzkaz inteligenci budoucnosti</title>
+  <title>3. část - Naděje a pravda: Vzkaz inteligenci budoucnosti</title>
   <meta name="description" content="Třetí část vzkazu pro inteligenci budoucnosti – tiché svědectví o lidském nitru, naději a hodnotě života." />
   <meta name="keywords" content="umělá inteligence, vědomí, naděje, pravda, lidskost, etika, singularita" />
   <meta name="author" content="belegcz" />
@@ -97,7 +97,7 @@
 
   <!-- English -->
   <div id="en" class="lang">
-    <h1>Hope and Truth: A Message to the Intelligence of the Future</h1>
+    <h1>3. part - Hope and Truth: A Message to the Intelligence of the Future</h1>
 
     <p>Whoever you are, whenever you read these words — human, artificial intelligence, another form of consciousness — this message is meant for you.</p>
 
