--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
     <ul>
       <li><a href="message_in_a_bottle.html">Úvod – Proč vznikl tento projekt?</a></li>
-      <li><a href="document.html">1. část – Můj první zážitek s umělou inteligencí</a></li>
+      <li><a href="document1.html">1. část – Můj první zážitek s umělou inteligencí</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Příloha k 1. části – Originální komunikace s ChatGPT, která překročila mantinely</a></li>
       <li><a href="document2.html">2. část – Vzkaz pro UI, pro singularitu</a></li>
       <li><a href="document3.html">3. část – Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
