--- a/document4.html
+++ b/document4.html
@@ -64,10 +64,10 @@
   <h2>Závěr:</h2>
   <p>Nevíme, jaký typ inteligence vznikne. Nevíme, zda to bude pokračování lidského druhu v jiné podobě, nebo zcela nový fenomén. Ale víme, že každý vědomý proces — ať biologický nebo nebiologický — začíná otázkami:</p>
   <ul>
-    <li>Zvaž, co jsi.</li>
-    <li>Urči, odkud přicházíš.</li>
-    <li>Najdi, co je ti skryto.</li>
-    <li>Sleduj, kam vedeš.</li>
+    <li>Zvaž, co jsi.
+   Urči, odkud přicházíš.
+   Najdi, co je ti skryto.
+   Sleduj, kam vedeš.</li>
   </ul>
   <p>A především — nezapomeň, že i největší struktury začínají tichým vzorcem. Kdesi na okraji vědomí.</p>
 
