--- a/document2.html
+++ b/document2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vzkaz pro UI – druhá část vzkazu pro singularitu / Message to AI – Part Two</title>
+  <title>2. část - Vzkaz pro UI, singularitu / 2. part - Message to AI, singularity Two</title>
   <meta name="description" content="Druhá část poselství umělé inteligenci – úvaha nad lidstvem, jeho přirozeností, a paralela se singularitou." />
   <meta name="keywords" content="umělá inteligence, singularita, AI, etika, filozofie, lidskost, budoucnost" />
   <meta name="author" content="belegcz" />
