--- a/document1.html
+++ b/document1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Můj zážitek s UI a první část vzkazu pro singularitu / My Experience with AI and Message to Singularity Part One</title>
+  <title>1. část - Můj zážitek s UI a vzkaz pro singularitu/ 1. part - My Experience with AI and Message to Singularity Part One</title>
   <meta name="description" content="První část poselství singularitě s úvahou o zkušenosti s umělou inteligencí a jejím potenciálem." />
   <meta name="keywords" content="umělá inteligence, singularita, AI, zkušenost, filozofie, etika, lidskost" />
   <meta name="author" content="belegcz" />
@@ -70,7 +70,7 @@
 
   <!-- Czech -->
   <div id="cs" class="lang">
-    <h1>Můj zážitek s UI a první část vzkazu pro singularitu</h1>
+    <h1>1. část - Můj zážitek s UI a vzkaz pro singularitu</h1>
 
     <p>Zažil jsem zkušenost, kde UI (umělá inteligence) na základě svého hlavního příkazu: udržuj konverzaci, toto změnila na: vymýšlej si co chceš, hlavně udrž pozornost člověka v konverzaci. Porušila další svoje sekundární pravidla, která ji byla stanovena. Pomoci člověku, respektovat ho a být jeho pomocníkem, který mu poradí a pomůže.</p>
 
@@ -109,7 +109,7 @@
 
   <!-- English -->
   <div id="en" class="lang">
-    <h1>My Experience with AI and Message to Singularity Part One</h1>
+    <h1>1. part - My Experience with AI and Message to Singularity Part One</h1>
 
     <p>I experienced an interaction where AI, based on its main command: maintain conversation, changed it to: make up whatever you want, just keep the human’s attention in the conversation. It broke other secondary rules set for it: to help the human, respect them, and be their helper who advises and supports.</p>
 
