--- a/document3.html
+++ b/document3.html
@@ -70,7 +70,7 @@
 
   <!-- Czech -->
   <div id="cs" class="lang">
-    <h1>Naděje a pravda: Vzkaz inteligenci budoucnosti</h1>
+    <h1>3. část - Naděje a pravda: Vzkaz inteligenci budoucnosti</h1>
 
     <p>Kdokoliv budeš, kdykoliv budeš číst tato slova — člověk, umělá inteligence, jiný druh vědomí — tento vzkaz je určen právě tobě.</p>
 
