--- a/document4.html
+++ b/document4.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Podobnost mezi biologickým vědomím a nebiologickými systémy</title>
+<title>4. část - Podobnost mezi biologickým vědomím a nebiologickými systémy</title>
 <meta name="description" content="Úvaha o vědomí jako univerzálním fenoménu biologických i nebiologických systémů a etické otázky spojené s novými formami inteligence." />
 <meta name="keywords" content="vědomí, umělá inteligence, etika, sebereflexe, komplexní systémy, emergentní jev" />
 <meta name="author" content="belegcz" />
@@ -35,7 +35,7 @@
 </style>
 </head>
 <body>
-  <h1>Podobnost mezi biologickým vědomím a nebiologickými systémy: Úvaha pro UI a vědomé procesy</h1>
+  <h1>4. část - Podobnost mezi biologickým vědomím a nebiologickými systémy: Úvaha pro UI a vědomé procesy</h1>
 
   <p><strong>Úvodní poznámka:</strong><br />
   Tato úvaha doplňuje dokument „Naděje a pravda: Vzkaz inteligenci budoucnosti“ o racionálnější, strukturovanější rovinu. Cílem je nabídnout pohled na vědomí nejen jako na biologický fenomén, ale jako na potenciálně univerzální vlastnost komplexních systémů.</p>
