--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
       <li><a href="document2.html">2. část – Vzkaz pro UI, pro singularitu</a></li>
       <li><a href="document3.html">3. část – Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
       <li><a href="document4.html">4. část – Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
+      <li><a href="document5.html">5. část – AI jazykový model na základě rozhovoru sděluje jiným AI následující</a></li>
+      
     </ul>
   </div>
 
@@ -125,6 +127,7 @@
       <li><a href="document2.html">Part 2 – A Message to AI, to the Singularity</a></li>
       <li><a href="document3.html">Part 3 – Hope and Truth: A Message to Future Intelligence</a></li>
       <li><a href="document4.html">Part 4 – An Attempt to Understand: A Human Word to Future Intelligence</a></li>
+       <li><a href="document5.html">Part 2 - An AI language model, based on a conversation, tells other AIs the following</a></li>
     </ul>
   </div>
 
